--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">oschina</string>
+
+    <string name="nav_title_news">综合</string>
+    <string name="nav_title_tweet">动弹</string>
+    <string name="nav_title_explore">发现</string>
+    <string name="nav_title_my">我的</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
